--- a/_includes/dove/logo.html
+++ b/_includes/dove/logo.html
@@ -1,6 +1,13 @@
-{%- case page.layout %}
+{%- assign _logo = include.name | default: page.layout %}
+{%- case _logo %}
 {%- when 'prime' or 'prime-page' or 'prime-post' %}
-{%- include prime/logo.html %}
+<span class="_logo"><a href="{{ site.home_url }}/prime">🦅 Prime</a></span>
+{%- when 'nova' or 'nova-page' or 'nova-post' %}
+<span class="_logo"><a href="{{ site.home_url }}/nova">🌌 Nova</a></span>
+{%- when 'mallet' or 'mallet-page' or 'mallet-post' %}
+<span class="_logo"><a href="{{ site.home_url }}/mallet">⚒️ Mallet</a></span>
+{%- when 'core' or 'core-page' or 'core-post' %}
+<span class="_logo"><a href="{{ site.home_url }}/mallet">🧿 Core</a></span>
 {%- else %}
 <span class="_logo"><a href="{{ site.home_url }}/">🕊️ Dove</a></span>
 {%- endcase %}
