--- a/_includes/dove/logo.html
+++ b/_includes/dove/logo.html
@@ -7,7 +7,7 @@
 {%- when 'mallet' or 'mallet-page' or 'mallet-post' %}
 <span class="_logo"><a href="{{ site.home_url }}/mallet">⚒️ Mallet</a></span>
 {%- when 'core' or 'core-page' or 'core-post' %}
-<span class="_logo"><a href="{{ site.home_url }}/mallet">🧿 Core</a></span>
+<span class="_logo"><a href="{{ site.home_url }}/core">🧿 Core</a></span>
 {%- else %}
 <span class="_logo"><a href="{{ site.home_url }}/">🕊️ Dove</a></span>
 {%- endcase %}
