--- a/_layouts/prime.html
+++ b/_layouts/prime.html
@@ -1,5 +1,6 @@
+{%- assign layout_name = "prime" -%}
 <!doctype html>
-<html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="no_js _{{ page.layout | default: 'html' }}_layout">
+<html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="no_js _{{ layout_name }}_layout">
   <!-- path   : {{ page.path }} -->
   <!-- layout : dove/_layouts/{{ page.layout }} -->
   <head>
@@ -12,50 +13,39 @@
     <style>
       .isvg svg { width:1em;height:1em }
     </style>
-    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}" />
+    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/{{ layout_name }}/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}" />
     {% include layout_head.html %}
     <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"><![endif]-->
   </head>
   <body>
     <div class="_views">
       <div class="_view">
-        <div class="_layout _1200">
-          <div class="container-lg px-3 my-5 markdown-body">
-            <header class="_header">
+        <div class="_layout container-lg px-3 my-5 markdown-body">
+          <header class="_header">
+            <div class="_layout">
+              {% capture header -%}{% include header.md %}{%- endcapture %}
+              {{ header | markdownify }}
+            </div>
+          </header>
+          <nav class="_nav">
+            <div class="_layout">
+              {% capture nav -%}{% include nav.md %}{%- endcapture %}
+              {{ nav | markdownify }}
+            </div>
+          </nav>
+          <main class="_main">
+            <article class="_article">
               <div class="_layout">
-                {% if page.use_header == false -%}
-                <style>._header{display:none !important}</style>
-                {%- else -%}
-                {% capture logo -%}{% include logo.html %}{%- endcapture %}<h1>{{ logo }}</h1>
-                {%- endif %}
+                {{ content }}
               </div>
-            </header>
-            <nav class="_nav">
-              <div class="_layout">
-                {% if page.use_nav == false -%}
-                <style>._nav{display:none !important}</style>
-                {%- else -%}
-                {% capture nav -%}{% include nav.md %}{%- endcapture %}{{ nav | markdownify }}
-                {%- endif %}
-              </div>
-            </nav>
-            <main class="_main">
-              <article class="_article">
-                <div class="_layout">
-                  {{ content }}
-                </div>
-              </article>
-            </main>
-            <footer class="_footer footer">
-              <div class="_layout">
-                {% if page.use_footer == false -%}
-                <style>._footer{display:none !important}</style>
-                {%- else -%}
-                {% capture footer -%}{% include footer.md %}{%- endcapture %}{{ footer | markdownify }}
-                {%- endif %}
-              </div>
-            </footer>
-          </div>{% comment %} end of container {% endcomment %}
+            </article>
+          </main>
+          <footer class="_footer">
+            <div class="_layout">
+              {% capture footer -%}{% include footer.md %}{%- endcapture %}
+              {{ footer | markdownify }}
+            </div>
+          </footer>
         </div>{% comment %} end of _layout {% endcomment %}
       </div>{% comment %} end of _view {% endcomment %}
       <div class="_view">
