--- a/_layouts/primer.html
+++ b/_layouts/primer.html
@@ -1,3 +1,4 @@
+{%- assign layout_name = "primer" -%}
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="_dark">
   <head>
