--- a/_includes/manifest.html
+++ b/_includes/manifest.html
@@ -1,1 +1,1 @@
-<link rel="manifest" href="{{ site.base_url }}/manifest.json?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}" />
+<!-- <link rel="manifest" href="{{ site.base_url }}/manifest.json?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}" /> -->
