--- a/_layouts/mallet.html
+++ b/_layouts/mallet.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="no_js _{{ layout_name }}_layout">
   <!-- path   : {{ page.path }} -->
-  <!-- layout : dove/_layouts/{{ page.layout }} -->
+  <!-- layout : _layouts/{{ page.layout }} -->
   <head>
     <meta charset="{{ site.encoding | default: 'utf-8' }}" />
     {% seo %}
