--- a/_source/_layouts/core.pug
+++ b/_source/_layouts/core.pug
@@ -1,57 +1,8 @@
-include _dove
+extends html
 block vars
   -
-    layout = 'core'
-    htmlClass = ['_core_layout']
+    layout_name = 'core'
+    htmlClass = [`_${layout_name}_layout`,'no_js']
     bodyClass = []
-    mainClass = []
-block update_vars
-+front_matter
-  block front_matter
-    +l
-    .
-      layout: html
-      use_pug: true
-      title: !{title}
-      description: !{description}
-block html
-  doctype html
-  html(lang=lang||'en-US' class=htmlClass.join(' '))
-    +l|<!-- path   : !{path} -->
-    +l|<!-- layout : dove/_source/_layouts/!{layout} -->
-    head
-      meta(charset=charset||'utf-8')/
-      +l|{% seo %}
-      meta(name="viewport" content="width=device-width,initial-scale=1")/
-      meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")/
-      meta#_color_scheme(name="color-scheme" content=color_scheme||'')/
-      meta#_theme_color(name="theme-color" content=theme_color||'')/
-      style.
-        .isvg svg { width:1em;height:1em }
-      block style
-        link#_style(rel="stylesheet" href!=`{{ site.base_url }}/assets/${layout}/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}`)/
-      +l|{% include layout_head.html %}
-      +l|<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
-    body
-      ._views
-        ._view: ._layout
-          header._header: ._layout
-            block header
-              //- p: code // header
-              +logo
-          nav._nav: ._layout._960
-            block nav
-              p: code // nav
-          main._main: article._article._layout._960
-            block content
-              h1 !{title}
-              p: code // content for : !{title}
-          footer._footer: ._layout._960
-            block footer
-              hr/
-              p: code // footer
-              hr/
-              p.text-right.text-grey: small: +edit_link(path)
-        ._view: ._layout: +l|{% include theme_switch.html %}
-        +l|{% include layout_body.html %}
-      //- ._views
+block style
+  +main_style
