--- a/_source/core/home.html.pug
+++ b/_source/core/home.html.pug
@@ -11,7 +11,7 @@ block content
     .hero_block .hero-hr { margin-top:45px }
   .hero_block.box
     h1.hero-title 💎 Main title
-    p.hero-description Your site's description or sub-title.
+    p.hero-description Your site's description.
 
   +thin_hr
-  p: code // home content
+  p: code // !{title.toLowerCase()} content
