--- a/_source/prime/index.html.pug
+++ b/_source/prime/index.html.pug
@@ -24,14 +24,14 @@ block content
   nav.mv
     b Html
     +angle
-    +site_nav(sub)
+    +site_nav(layout_name)
 
   +thin_hr
   nav.mv
     b Markdown
     +angle
-    +site_nav(sub+'/md')
+    +site_nav(layout_name+'/md')
 
   +thin_hr
   nav.mv
-    +test_nav(sub)
+    +test_nav(layout_name)
