--- a/_source/core/index.html.pug
+++ b/_source/core/index.html.pug
@@ -22,16 +22,16 @@ block content
 
   +thin_hr
   nav.mv
-    +sna(sub+"/"): b !{capitalize(sub)}
+    b Html
     +angle
-    +site_nav(sub)
+    +site_nav(layout_name)
 
   +thin_hr
   nav.mv
     b Markdown
     +angle
-    +site_nav(sub+'/md')
+    +site_nav(layout_name+'/md')
 
   +thin_hr
   nav.mv
-    +test_nav(sub)
+    +test_nav(layout_name)
