--- a/_source/mallet/_html.pug
+++ b/_source/mallet/_html.pug
@@ -1,20 +1,17 @@
 extends /_source/_layouts/mallet
-mixin site_nav(sub)
-  +sna(sub+"/"): b !{capitalize(sub)}
-  +angle
-  +sna(sub+"/preview.html")| Preview
-  +bull
-  +sna(sub+"/home.html")| Home
-  +bull
-  +sna(sub+"/page.html")| Page
-  +bull
-  +sna(sub+"/404.html")| 404
 block append update_vars
-  - path  = ['mallet',path].join('/')
-block append front_matter
+  - path = [layout_name,path].join('/')
+block prepend front_matter
   +l| index: false
+block header
+  h1|{% include dove/logo.html name="!{layout_name}" %}
 block nav
-  div: +site_nav('mallet')
+  div.mv
+    b Html
+    +angle
+    +site_nav(layout_name)
+  +thin_hr
 block footer
   +thin_hr
-  p.text-right.text-grey: small: +edit_link(path)
+  p: code // site footer
+  +_edit_link
