--- a/_source/mallet/index.html.pug
+++ b/_source/mallet/index.html.pug
@@ -1,47 +1,37 @@
 extends _html
 block append vars
   - path   = 'index.html'
-  - title  = `Home`
+  - title  = `Mallet`
+  - description = `Smooth theme for your site.`
+block header
+  h1|{% include dove/logo.html %}
+block nav
+  //- no nav
+block footer
+  //- no site footer
+  +_edit_link
 block content
-  p: code // content for : !{title}
+  style.
+    .hero_block { padding:1rem 2rem }
+    .hero_block .hero-title { margin-top:1rem }
+    .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
+    .hero_block .hero-hr { margin-top:45px }
+  .hero_block.box
+    h1.hero-title ⚒️ !{title}
+    p.hero-description !{description}
 
-//- .hero-box-1
-block prepend content
-  block hero-box
-    style.
-      .hero-box-1 #_hero-title { margin-left:1.6em;text-indent:-1.7em }
-      .hero-box-1 { padding:0 }
-      .hero-box-1 .site-description {
-        margin-left:5.3rem;
-        font-weight: 300;
-        font-size: 1.1em;
-      }
-      .hero-box-1 .hero-hr { margin-top:45px }
-    .hero-box-1.box
-      h1#_hero-title ⚒️ Heroic Title
-      p.site-description Your site's description or mission statement.
-      hr.hero-hr/
+  +thin_hr
+  nav.mv
+    b Html
+    +angle
+    +site_nav(layout_name)
 
-//- .hero-box-2
-block prepend content
-  block hero-box
-    style.
-      .hero-box-2 #_hero-title { margin-left:1.6em;text-indent:-1.7em }
-      .hero-box-2 {
-        margin:.5rem 0;
-        padding: 1px 2rem 3rem;
-        background: linear-gradient(45deg, #37b4aa, #b05eef, transparent);
-        color: #fff;
-      }
-      .hero-box-2 hr { border-color: #cdb8e3 }
-      .hero-box-2 .site-description {
-        margin-left:5.3rem;
-        font-weight: 300;
-        font-size: 1.1em;
-        color: #000;
-      }
-      ._dark .hero-box-2 .site-description { color: #fff }
-    .hero-box-2.box
-      h1#_hero-title ⚒️ Heroic Title
-      p.site-description Your site's description or mission statement.
-    hr/
+  +thin_hr
+  nav.mv
+    b Markdown
+    +angle
+    +site_nav(layout_name+'/md')
+
+  +thin_hr
+  nav.mv
+    +test_nav(layout_name)
