--- a/_source/nova/test_colors.html.pug
+++ b/_source/nova/test_colors.html.pug
@@ -2,9 +2,10 @@ extends _html
 block append vars
   - path   = 'test_colors.html'
   - title  = `Test Colors`
-block content
-  nav.mv: +test_nav(sub)
+block append nav
+  nav.mv: +test_nav(layout_name)
   +thin_hr
+block content
   +include('test','test_colors.md')
 block footer
   //- no site footer
