--- a/_source/_layouts/mallet.pug
+++ b/_source/_layouts/mallet.pug
@@ -8,7 +8,7 @@ block style
   +main_style
 block body
   ._views
-    ._view._app.__fadein: ._layout.container-lg.px-3.my-5.markdown-body: +main_view
+    ._view._app.__fadein: ._layout.container-lg.markdown-body: +main_view
     ._view: ._layout: +l|{% include theme_switch.html %}
     +l|{% include layout_body.html %}
   //- ._views
