--- a/_source/mallet/home.html.pug
+++ b/_source/mallet/home.html.pug
@@ -10,7 +10,7 @@ block content
     .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
     .hero_block .hero-hr { margin-top:45px }
   .hero_block.box
-    h1.hero-title ⚒️ Smooth title
+    h1.hero-title ⚒️ Site title
     p.hero-description Your site's description.
 
   +thin_hr
