--- a/_source/core/index.html.pug
+++ b/_source/core/index.html.pug
@@ -7,6 +7,7 @@ block header
   h1|{% include dove/logo.html %}
 block nav
   //- no nav
+  +hide_nav
 block footer
   //- no site footer
   +_edit_link
